--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -39,12 +39,13 @@ header {
     background-color: #f1f1f1;
     border-radius: 10px;
     position: absolute;
-    right: 0;
+    left: 10px;
     z-index: 1;
     margin-top: 30px;
     min-width: 10rem;
     padding: .5rem 0;
     transition: .3s all ease;
+    animation: fadeIn .5s ease-in-out forwards;
 }
 
 #menu a {
@@ -52,10 +53,15 @@ header {
     padding: 5px;
     text-decoration: none;
     color: black;
-    font-size: 0.85rem;
+    font-size: 1rem;
     padding: .25rem 1.5rem;
     border-radius: 2px;
     transition: .3s all ease;
+    text-align: center;
+}
+
+#menu a#tab-imagens {
+    font-weight: bold;
 }
 
 #menu a i {
