--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -166,6 +166,7 @@ main {
     gap: 20px;
     align-items: stretch;
     justify-content: center;
+    animation: fadeInNav .5s ease-in-out forwards;
 }
 
 .nav iframe {
@@ -211,149 +212,15 @@ main {
     }
 }
 
-/* body {
-    height: 100vh;
-    
-}
 
-body.light-mode {
-    background-color: #f0f0f0;
-    color: #333;
-}
-
-body.dark-mode {
-    background-color: #333333;
-    color: #ffffff;
-}
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin: 20px;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #000000;
-    transition: .4s;
-    border-radius: 34px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 8px;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    border-radius: 50%;
-    left: 4px;
-    bottom: 4px;
-    background-color: #ffffff;
-    transition: .4s;
-}
-
-input:checked+.slider {
-    background-color: #ffffff;
-}
-
-input:checked+.slider:before {
-    transform: translateX(26px);
-    background-color: #000000;
-}
-
-button, a {
-    all: unset;
-    display: inline-block;
-    box-sizing: border-box;
-    cursor: pointer;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: calc(100vh - 74px);
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards;
-}
-
-main h1 {
-    display: flex;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    font-size: 48px;
-    animation-delay: 0.5s;
-}
-
-.buttons {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    gap: 30px;
-
-}
-
-main h1,
-.buttons {
-    opacity: 0;
-    animation: fadeIn .8s ease-in-out forwards;
-}
-
-.buttons a {
-    transition: 0.3s all ease;
-    text-transform: uppercase;
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards;
-    animation-delay: 0.5s;
-    font-size: 14px;
-    border-bottom: 1px solid white;
-}
-
-.buttons button:hover {
-    background-color: #00eeff73;
-    font-weight: 600;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo img {
-    transition: 0.3s all ease;
-}
-
-.logo img:hover {
-    scale: 1.2;
-}
-
-@keyframes fadeIn {
+@keyframes fadeInNav {
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateY(-20px);
     }
 
     100% {
         opacity: 1;
         transform: translateY(0);
     }
-} */
+}
