adicionado o gif atualizado em todas as páginas

--- a/Calendario/style.css
+++ b/Calendario/style.css
@@ -115,3 +115,9 @@ body {
 #addEventForm button:hover {
     background-color: #218838;
 }
+
+@media (max-width: 600px) {
+    #button-sair {
+        display: none;
+    }
+}
