--- a/Acompanhamento/style.css
+++ b/Acompanhamento/style.css
@@ -13,6 +13,9 @@ header {
     color: white;
     padding: 15px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #button-sair {
@@ -28,9 +31,6 @@ header {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s;
-    position: absolute;
-    left: 15px;
-    top: 15px;
 }
 
 #button-sair:hover {
