--- a/css/stylePos.css
+++ b/css/stylePos.css
@@ -21,7 +21,7 @@ header {
     justify-content: space-between;
     align-items: flex-start;
     padding: 1rem;
-    margin-right: 100px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.623);
 }
 
 header button#voltar {
@@ -270,11 +270,11 @@ button#deleteButton {
     transition: background-color 0.3s;
 }
 
-button#openNotify {
+/* button#openNotify {
     position: absolute;
     top: 20px;
     right: 20px;
-}
+} */
 
 .notification-menu {
     position: relative;
@@ -300,9 +300,9 @@ button#openNotify {
     border-radius: 50%;
     padding: 2px 6px;
     font-size: 12px;
-    position: absolute;
+    /* position: absolute;
     top: 5px;
-    right: 15px;
+    right: 15px; */
 }
 
 #icon-bell {
