--- a/Pagamento/style.css
+++ b/Pagamento/style.css
@@ -1,156 +1,115 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: "Montserrat", sans-serif;
 }
 
 body {
-  background-color: #ffffffbd;
+	background-color: #fff;
+	display: grid;
+	grid-template-rows: 100px 1fr;
+	height: 200vh;
+}
+
+button {
+	all: unset;
 }
 
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-
+	padding: 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+	background: linear-gradient(90deg, #1a1a2e 0%, #3e4a70 50%, #2b2b3b 100%);
 }
 
-header .navbar-left {
-  display: flex;
-  align-items: center;
-  gap: 400px;
+header select {
+	border: none;
+	padding: 3px 2px;
+	width: 150px;
+	background-color: #fff;
+	color: #000000;
 }
 
-.hidden {
-  display: none;
+header img {
+	height: 150px;
 }
 
-#menu {
-  background-color: #f1f1f1;
-  border-radius: 10px;
-  position: absolute;
-  right: 0;
-  z-index: 1;
-  margin-top: 30px;
-  min-width: 10rem;
-  padding: .5rem 0;
-  transition: .3s all ease;
-}
-
-#menu a {
-  display: block;
-  padding: 5px;
-  text-decoration: none;
-  color: black;
-  font-size: 0.85rem;
-  padding: .25rem 1.5rem;
-  border-radius: 2px;
-  transition: .3s all ease;
-}
-
-#menu a i {
-  margin-right: 10px;
-}
-
-#menu a:hover {
-  background-color: #ccc;
-}
-
-a,
-button {
-  all: unset;
-  cursor: pointer;
+header p {
+	text-transform: capitalize;
+	color: #F0F0F0;
 }
 
 main {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  height: 90vh;
-  width: 100%;
-
-  margin-top: 2rem;
-  gap: 20px;
-}
-
-.filtros {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  padding: 20px;
-}
-
-.filtros>div {
-  display: flex;
-  flex-direction: column;
-}
-
-.filtros label {
-  margin-bottom: 5px;
-  text-align: center;
-}
-
-.filtros select {
-  font-size: 16px;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	gap: 40px;
+	margin: 40px;
 }
 
 .tabela {
-  width: 80%;
-  height: 80%;
-  overflow-y: auto;
-  margin: 0 auto;
-}
-
-#tabela-faturamento {
-  width: 100%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-collapse: collapse;
-}
-
-#tabela-faturamento td,
-th {
-  border: 1px solid #bbbbbb;
-  text-align: center;
-}
-
-.checked {
-  background-color: green;
-  color: white;
+	max-height: 80vh;
+	overflow-y: auto;
+	width: 80%;
+	margin: auto;
 }
 
 .menu-buttons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px;
-}
-
-.buttons {
-  display: flex;
-  justify-content: flex-start;
-  gap: 20px;
+	margin: 15px 0;
 }
 
 .buttons button {
-  padding: 5px;
-  border-radius: 10px;
+	background-color: #000;
+	color: white;
+	padding: 3px 5px;
+	transition: 0.3s all ease;
 }
 
-button#marcar-todos {
-  background-color: #ffa621;
-  grid-column: 1;
+.buttons input {
+	padding: 3px 5px;
 }
 
-button#confirmar-pagamento {
-  background-color: #21ff29;
-  grid-column: 1;
+.buttons button:hover {
+	background-color: #FF5833;
+	cursor: pointer;
 }
 
-button#adicionar-valor {
-  background-color: #fbff21;
-  grid-column: 2;
-  grid-row: 1;
+#table-list table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#table-list table thead {
+	background-color: #3E6470;
+}
+
+#table-list table th {
+	color: #fff;
+	padding: 3px;
+	font-weight: 400;
+	border: 1px solid #2C003E;
+}
+
+#table-list table td {
+	border: 1px solid #2C003E;
+	text-align: center;
+	padding: 3px;
+	color: #000000;
+}
+
+#graficos-tarefas {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	gap: 20px;
+	padding: 20px;
+}
+
+#graficos-tarefas canvas {
+	background-color: #fff;
+	border-radius: 10px;
+	padding: 20px;
+	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
