--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -178,13 +178,13 @@ th {
 
 }
 
-.tabelaClientes tbody tr:nth-child(odd) {
+/* .tabelaClientes tbody tr:nth-child(odd) {
     background-color: #f2f2f2;
 }
 
 .tabelaClientes tbody tr:nth-child(even) {
     background-color: #ffffff;
-}
+} */
 
 table#tabelaClientes td,
 table#tabelaClientes th {
