--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -134,8 +134,6 @@ section.tabela-form {
 
 #filtro {
     margin-left: 0;
-    animation: fadeIn 1.3s ease-in-out forwards;
-
 }
 
 #filtro h1,
@@ -154,6 +152,11 @@ section.tabela-form {
     box-sizing: border-box;
 }
 
+.filtro-tabela {
+    animation: fadeIn 1.3s ease-in-out forwards;
+
+}
+
 .tabelaClientes {
     margin-top: 15px;
     overflow-y: auto;
@@ -165,8 +168,6 @@ table#tabelaClientes {
     border-collapse: collapse;
     width: 100%;
     margin-left: 0;
-    animation: fadeIn 1s ease-in-out forwards;
-
 }
 
 td,
@@ -721,11 +722,9 @@ button#generate-pdf {
 @keyframes fadeIn {
     0% {
         opacity: 0;
-        transform: translateY(10px);
     }
 
     100% {
         opacity: 1;
-        transform: translateY(0);
     }
 }
