--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -136,8 +136,7 @@ section.tabela-form {
     margin-left: 0;
 }
 
-#filtro h1,
-.form-edicao h1 {
+#filtro h1 {
     font-size: 24px;
     padding-bottom: 10px;
     text-decoration: underline;
@@ -154,7 +153,9 @@ section.tabela-form {
 
 .filtro-tabela {
     animation: fadeIn 1.3s ease-in-out forwards;
-
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
 }
 
 .tabelaClientes {
@@ -398,7 +399,7 @@ table#tabela-obra th:first-child {
     background-color: #00eeff73;
 }
 
-table#tabelaClientes tr:hover {
+table tr:hover {
     cursor: pointer;
     background-color: #00eeff73;
 }
@@ -440,8 +441,7 @@ table#tabelaClientes tr:hover {
 
 #add-cliente button#salvar,
 #add-imagem button#salvar,
-#add-acomp button#salvar,
-.form-edicao button#salvar_funcoes {
+#add-acomp button#salvar {
     border: 1px solid black;
     background-color: #119111;
     text-align: center;
@@ -496,23 +496,119 @@ table#tabelaClientes tr:hover {
 }
 
 .form-edicao {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn .2s ease-in-out forwards;
+}
+
+form#form-add {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    max-height: 70%;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: showModal 0.3s ease;
+}
+
+form#form-add .funcao {
+    background-color: rgb(218, 217, 217);
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+/* form#form-add h1 {
+    margin-bottom: 3rem;
+} */
+
+form#form-add select,
+form#form-add input {
+    border: none;
+    padding: 5px 10px;
+}
+
+button {
+    all: unset;
+}
+
+form#form-add button {
+    background-color: #119111;
+    text-align: center;
+    color: #ffffff;
+    padding: 0.5rem 2rem;
+    border-radius: 20px;
+    transition: .3s;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+form#form-add button:hover {
+    background-color: #0c6b0c;
+    cursor: pointer;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.funcao {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    gap: 15px;
+    gap: 8px;
+}
+
+.titulo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.opcoes {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.show-in {
+    animation: showIn 0.5s forwards;
+}
+
+#status_funcao {
+    width: 150px;
+}
+
+#status_funcao select {
+    width: 80px;
     margin: 0 auto;
-    animation: fadeIn 1.3s ease-in-out forwards;
-
 }
 
-.form-edicao p {
-    margin: 12px 0 5px 0;
-    font-weight: 600;
+@media (max-width: 1050px) {
+    .opcoes {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 8px;
+    }
 }
 
-.form-edicao h1 {
-    text-align: center;
-    margin-bottom: 50px;
+@keyframes showIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .form-edicao .funcao input,
@@ -524,8 +620,17 @@ table#tabelaClientes tr:hover {
     display: none;
 }
 
-.form-edicao label#campoNomeImagem {
-    font-size: 14px;
+.titulo-funcoes {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+#campoNomeImagem {
+    font-size: 1.2em;
+    color: #333;
+    font-weight: bold;
 }
 
 .form-edicao .buttons {
