--- a/Imagens/style.css
+++ b/Imagens/style.css
@@ -237,6 +237,30 @@ tbody tr:hover {
     transition: background-color 0.3s;
 }
 
+.legenda {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+.legenda-item {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: white;
+}
+
+.circulo {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.antecipada {
+    background-color: #ff9d00;
+}
+
 #formularioModal button[type="submit"]:hover {
     background-color: #218838;
 }
