--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -95,7 +95,7 @@ nav {
     display: flex;
     justify-content: center;
     border: 1px solid black;
-    background-color: #8d8d8d;
+	background: linear-gradient(90deg, #1a1a2e 0%, #3e4a70 50%, #2b2b3b 100%);
 }
 
 nav a {
@@ -107,6 +107,7 @@ nav a {
     border-right: 1px solid black;
     transition: .3s;
     text-align: center;
+    color: white;
 }
 
 nav a:first-child {
@@ -115,12 +116,12 @@ nav a:first-child {
 
 nav a:hover {
     color: #ffffff;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 nav a.active {
     color: #ffffff;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 section.tabela-form {
@@ -396,12 +397,12 @@ table#tabela-obra th:first-child {
 
 
 .selecionada {
-    background-color: #00eeff73;
+	background-color: #FF5833;
 }
 
-table tr:hover {
+table tbody tr:hover {
     cursor: pointer;
-    background-color: #00eeff73;
+	background-color: #FF5833;
 }
 
 .form {
@@ -531,11 +532,11 @@ form#form-add .funcao {
     margin-bottom: 3rem;
 } */
 
-form#form-add select,
+/* form#form-add select,
 form#form-add input {
     border: none;
     padding: 5px 10px;
-}
+} */
 
 button {
     all: unset;
