--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -858,3 +858,47 @@ button#generate-pdf {
         opacity: 1;
     }
 }
+
+
+
+#desc-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn .5s ease-in-out forwards;
+}
+
+
+.modal-content-desc {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    max-height: 70%;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: showModal 0.3s ease;
+}
+
+.modal-content-desc h2 {
+    margin-bottom: 15px;
+}
+
+.closeDesc {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.closeDesc:hover {
+    color: black;
+}
