--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -495,6 +495,10 @@ table tbody tr:hover {
     flex-direction: column;
     gap: 15px
 }
+#add-acomp #data-email {
+    flex-direction: column;
+    gap: 15px
+}
 
 .form-edicao {
     display: none;
